<resources>
    <string name="app_name">GECE-SIS App 2.0</string>
    <string name="profile_button_description">Profile</string>
    <string name="back_button_description">Back</string>
    <string name="long_policy_text">
    Your policy text goes here. It can be a long paragraph of 500 words or more. You can copy and paste your policy content here.
    </string>
    <string name="policy_title">Policy</string>
    <string name="subheading1">Subheading 1</string>
    <string name="subheading2">Subheading 2</string>
    <!--    <string name="title_activity_attendance_courselist">Your Title</string>-->
    <string name="enter_password">Enter your Password</string>
    <string name="Enter_username">Enter your Username</string>
    <string name="email">Email:</string>
    <string name="please_login_with_your_information">Please Login with your information</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="courses">Courses</string>
    <string name="policy">Policy</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="back">Back</string>
    <string name="title_activity_attendace_combo_boxes">attendace_combo_boxes</string>
    <string name="attendance">Attendance</string>
    <string name="announcement">Announcement</string>
    <string name="complain_feedback">Complain and feedback</string>
    <string name="grades">Grades</string>
    <string name="attendance_image_desc">Attendance icon</string>
    <string name="announcement_image_desc">Announcement icon</string>
    <string name="complain_image_desc">Complain and Feedback icon</string>
    <string name="grades_image_desc">Grades icon</string>
    <string name="courses_image_desc">Courses icon</string>
    <string name="policies_image_desc">Policies icon</string>
    <string name="account_image_desc">Account icon</string>
    <string name="back_image_desc">Back icon</string>
    <string name="course_name">Course Name 1</string>
    <string name="course_name_2">Course Name 2</string>
    <string name="course_name_3">Course Name 3</string>
    <string name="course_name_4">Course Name 4</string>
    <string name="view_attendance">View Attendance</string>
    <string name="year_label">Year</string>
    <string name="semester_label">Semester</string>
    <string name="course_label">Course</string>
    <string name="username">Username:</string>
    <string name="add_button_description">Add new announcement</string>
    <string name="profile_icon">profile_icon</string>
    <!-- Arrays for Spinners -->
    <string-array name="year_array">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>
    <string-array name="semester_array">
        <item>Semester 1</item>
        <item>Semester 2</item>
        <item>Semester 3</item>
        <item>Semester 4</item>
        <item>Semester 5</item>
        <item>Semester 6</item>
        <item>Semester 7</item>
        <item>Semester 8</item>
    </string-array>
    <string-array name="course_array">
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>History</item>
        <item>Geography</item>
        <item>Computer Science</item>
        <item>Economics</item>
    </string-array>
    <string name="view_grades">View Grades</string>
    <string name="cgpa_num">3.5</string>
    <string name="sgpa_num">3.42</string>
    <string name="sgpa">S-GPA</string>
    <string name="cgpa">C-GPA</string>
    <string name="Nextbutton">Save</string>
    <string name="Savebutton">Next</string>
</resources>