<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- GridLayout with CardViews -->
    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="24dp">

        <!-- First CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cgpa_num"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#FF8570"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cgpa"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Second CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sgpa_num"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#FF8570"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sgpa"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <!-- Heading -->
    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/view_grades"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="#5B7981"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textAlignment="center"/>

    <!-- Spinner for Year -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_label"
        android:textSize="18sp"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <Spinner
        android:id="@+id/yearspinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <!-- Spinner for Semester -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester_label"
        android:textSize="18sp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="34dp" />
    <Spinner
        android:id="@+id/semesterspinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <!-- Spinner for Course -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_label"
        android:textSize="18sp"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>
    <Spinner
        android:id="@+id/course_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Nextbutton"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF8570"
        app:cornerRadius="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>



</LinearLayout>
