<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#FFFFFF"
    tools:context=".LoginScreen">

    <!-- Logo at the top -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="261dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/durbeen3" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="261dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/durbeen3" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/primary_orange"
        app:cardCornerRadius="40dp"
        android:layout_marginBottom="-20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_login_with_your_information"
                android:textColor="@color/grey"
                android:alpha="0.7"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textSize="15sp"
                android:textColor="@color/grey"
                android:alpha="1"/>

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/customlineedit"
                android:hint="@string/Enter_username"
                android:inputType="textWebEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textSize="15sp"
                android:textColor="@color/grey"
                android:alpha="1"/>
            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:background="@drawable/customlineedit"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                app:backgroundTint="@color/grey"
                android:alpha="0.6"
                android:text="@string/login"
                android:textSize="27sp"
                android:textColor="@color/white"
                app:cornerRadius="35dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>
