<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageButton
        android:background="@drawable/circle"
        android:id="@+id/policiesback_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="25dp"

        android:contentDescription="@string/profile_button_description"
        android:src="@drawable/back"
        android:scaleType="centerInside"/>
    <!-- Orange Bold Policy Title -->
    <TextView
        android:id="@+id/title_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Policy"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_policy"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbarThumbVertical="@drawable/scrollbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Paragraph 1 -->


            <!-- Subheading 1 -->
            <TextView
                android:id="@+id/subheading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subheading1"
                android:textSize="20sp"
                android:textColor="@color/primary_orange"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                />

            <!-- Paragraph 2 -->
            <TextView
                android:id="@+id/policy_text_part2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_policy_text"
                android:textSize="16sp"
                android:padding="16dp" />

            <!-- Subheading 2 -->
            <TextView
                android:id="@+id/subheading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subheading2"
                android:textSize="20sp"
                android:textColor="@color/primary_orange"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"/>

            <!-- Paragraph 3 -->
            <TextView
                android:id="@+id/policy_text_part3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_policy_text"
                android:textSize="16sp"
                android:padding="16dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
